# thw-course-scraper

./: .editorconfig  .gitignore
scraper/: pyproject.toml
scraper/scraper/: .env.example  pipelines.py  settings.py
scraper/scraper/spiders/: blueprints.py  courses.py  last_minute_courses.py
thw_course_scraper/: manage.py
thw_course_scraper/thw_course_scraper/: settings.py  urls.py  wsgi.py
webapp/: pyproject.toml
webapp/course_app/: api_util.py  cache.py  datetime_util.py  models.py  repository.py  urls.py  views.py
webapp/webapp/: settings.py  urls.py
