[tool.poetry]
name = "webapp"
version = "0.1.0"
description = "A webapp for the THW course scraper"
authors = ["DominikSudwischer"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
