[tool.poetry]
name = "webapp"
version = "0.1.0"
description = "A webapp for the THW course scraper"
authors = ["DominikSudwischer"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.2"
arrow = "^0.15.6"
cachetools = "^4.1.0"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
